# mansikkatilaamo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/backend/: main.py  models.py  schemas.py  sheets.py  tietokanta.py
src/frontend/: app.py  funktiot.py  tilaus.py
tests/: conftest.py  test_kannat.py  test_mansikoidentilaus.py  test_sheets_api_yhteydet.py  test_varaus_kantaan.py  testaa_varaus_kantaan.py
