[project]
name = "mansikoidentilaus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "crud>=0.1",
    "fastapi[standard]>=0.133.0",
    "fastcrud>=0.21.0",
    "pydantic>=2.12.5",
    "sqlmodel>=0.0.37",
    "streamlit>=1.55.0",
]
