[project]
name = "mansikoidentilaus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "crud>=0.1",
    "fastapi[standard]>=0.133.0",
    "fastcrud>=0.21.0",
    "google-api-python-client>=2.192.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "gspread>=6.2.1",
    "pydantic>=2.12.5",
    "sqlmodel>=0.0.37",
    "streamlit>=1.55.0",
    "translate>=3.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
